samples/_failures_safe/1761594144_92d73e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_670c043c.c: In function ‘update_simulation’:
./samples/SAFE/__tmp_670c043c.c:127:5: error: expected expression at end of input
  127 |     for (size_t i = 0; i <
      |     ^~~
./samples/SAFE/__tmp_670c043c.c:127:5: error: expected declaration or statement at end of input
